DNN-9034: Fixed long server name overlapping issue

--- a/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/history/taskHistoryItemRow/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/history/taskHistoryItemRow/style.less
@@ -16,6 +16,7 @@
         margin: 0 5px 0 5px;
         float: left;
         width: 15%;
+        word-wrap: break-word;
     }
     .term-label-elapsedTime {
         text-align: center;
